prevent flicker in responsive tabs
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12503 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/stylesheet.css
+++ b/templates/tpl_modified_responsive/stylesheet.css
@@ -221,6 +221,11 @@
   margin:0;
   padding:0;
 }
+/* prevent flicker in responsive tabs */
+ul.resp-tabs-list{
+  display:none !important;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
@@ -4581,16 +4586,6 @@ ul.address_block li .address {
 
 
 /* 46. START miscellaneous */
-
-/* START No Javascript Styles for Tabs */  
-/* Moved in general.css.php as inline-style */
-/*
-ul.resp-tabs-list{
-  display:none;
-}
-*/
-/* END No Javascript Styles for Tabs */
-
 
 /* START Subcontent navigation in content */
 .subcontent {
